# cookiecutter-pipenv

./: .gitignore  .pyup.yml  .travis.yml  README.rst  cookiecutter.json  test-script.py  test.sh
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .env  .gitignore  .isort.cfg  .travis.yml  Makefile  Pipfile  README.rst  app.py  manage.py  pytest.ini  setup.cfg  setup.py  test-scipt.py  travis_pypi_setup.py
{{cookiecutter.project_slug}}/config/: base_settings.py  get_env.py  test_settings.py  urls.py
{{cookiecutter.project_slug}}/config/django/settings/: __init__.py  base.py  local.py  testing.py
{{cookiecutter.project_slug}}/config/settings/: __init__.py  base.py  get_env.py  local.py  test.py
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: pytest.ini  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/pseudo/: models.py  schemas.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/pseudos/: models.py  schemas.py  urls.py  views.py
