[metadata]
name = {{ cookiecutter.project_name }}
summary = {{ cookiecutter.project_short_description }}
description-file = README.rst
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: {{ cookiecutter.open_source_license }}
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: {{ cookiecutter.python_version }}

[files]
packages =
    {{ cookiecutter.project_name }}
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
; [entry_points]
; console_scripts =
;     dopplerr = dopplerr.main:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True



[pep8]
max-line-length = 100
